Feat (Index): I've updated the resume link to direct it to the correct place and added a new demo project to the portfolio. I also adjusted the text and position of the button on the website.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#networks">Networks</a></li>
 
         </ul>
-        <button id="menuButton" onclick="toggleMenu()()">
+        <button id="menuButton" onclick="toggleMenu()">
             <i class='bx bx-menu'></i>
         </button>
     </nav>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="content flex">
-            <a href="https://drive.google.com/file/d/12GR701sUG3jft14ljnVJv6UzlRranAir/view?usp=sharing" target="_blank"
+            <a href="https://drive.google.com/file/d/1kwRX4s9N8-y4fcZ0gdtib8Pgk4mBDKGY/view?usp=sharing" target="_blank"
                 rel="noopener noreferrer"> <button>Curriculum</button></a>
         </div>
     </div>
@@ -109,14 +109,12 @@
             <img src="./assets/person.png" alt="person">
         </div>
         <div class="right">
-            <p> In my technological repertoire, I have accumulated knowledge in several areas, from frontend development
-                with React.js and JavaScript to the design of responsive interfaces using Styled-Components and CSS
-                frameworks. I have experience building robust APIs with Node.js and Express.js, integrating services
-                with RESTful services and microservices, and managing data with PostgreSQL and MongoDB. To ensure
-                efficiency and scalability in development, I use Docker and task executors. Additionally, I'm used to
-                using prototyping tools like Figma, ensuring a user-centric approach from the design phase. My approach
-                is always focused on creating modern, functional web solutions adapted to user needs and project
-                requirements.</p>
+            <p>I am a committed programmer, aware that discipline is the key to success. My meticulous and consistent
+                approach allows me to face technical challenges with confidence, always looking for ways to improve
+                myself. I am determined to progress in my software development career, using my discipline to reach new
+                professional heights. By immersing myself in the latest technologies, I aim to create solutions that not
+                only work, but also have an impact, thus contributing to the success and advancement of the projects I
+                work on.</p>
 
         </div>
     </div>
@@ -157,14 +155,13 @@
                 </div>
             </div>
             <div class="item">
-                <img src="./assets/web-site3.PNG">
+                <img src="./assets/burguer.png">
                 <div class="info">
-                    <h4>Users Login</h4>
-                    <p>I'm developing a page that uses technologies such as semantic HTML, CSS Flexbox, JavaScript and
-                        React.js. This page will have integration between the front-end and back-end, where we will use
-                        Node.js to create the API, following the HTTP protocol, which defines methods such as GET, POST,
-                        PUT and DELETE to manipulate data. It will soon be available in our portfolio.</p>
-                    <!-- <a href="#" target="_blank">Click here! <i class='bx bx-link-external'></i></a> -->
+                    <h4>Hamburgueria</h4>
+                    <p>Welcome to Hamburger Delights! Explore our juicy burgers, crispy fries and irresistible
+                        milkshakes. Order online for delivery or collection. An incredible gastronomic experience.</p>
+                    <a href="https://code-burger-react-azure.vercel.app/login" target="_blank">Click here! <i
+                            class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
